--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<body style="background:black" data-color-scheme="dark" data-src="./1/main.urls"></body>
+<body style="background:black" data-color-scheme="dark" data-src="./1/main.urls" data-focus-url="./main.stdn" data-focus-line=5></body>
 <script type="module" src="../dist/main.js"></script>
