--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background:black" data-color-scheme="dark" data-src="./1/main.urls" data-focus-url="./main.stdn" data-focus-line=7 data-focus-id=eg>
+<html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn" data-focus-line="2" data-focus-id="t1">
     <body>
         <script type="module" src="../dist/main.js"></script>
         <script type="module">
