--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn" data-focus-line="2" data-focus-id="t1">
+<html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn" data-focus-line="2" data-focus-id="t1" data-string="{lang json, block, src https://cdn.jsdelivr.net/gh/microsoft/vscode/extensions/cpp/package.json, code []}">
     <body>
         <script type="module" src="../dist/main.js"></script>
         <script type="module">
