--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
     data-src="./main.urls"
     data-focus-url="./main.stdn"
     data-focus-line="2"
-    data-focus-id="t1"
+    data-focus-id="flt"
 >
     <body>
         <script type="module" src="../dist/main.js"></script>
