--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     data-focus-id="flt"
 >
     <body>
-        <script type="module" src="../dist/main.js"></script>
+        <script type="module" src="../main.js"></script>
         <script type="module">
             window.viewer.dblClickLineListeners.push((line,url,partialLine)=>{
                 console.log(line,url,partialLine)
