--- a/test/index.html
+++ b/test/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html style="background:black" data-color-scheme="dark"
-    data-src="./main.urls"
-    data-focus-url="./main.stdn"
-    data-focus-line="2"
-    data-focus-id="flt"
->
-    <body>
-        <script type="module" src="../main.js"></script>
-        <script type="module">
-            window.viewer.dblClickLineListeners.push((line,url,partialLine)=>{
-                console.log(line,url,partialLine)
-            })
-        </script>
-    </body>
+<html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn"
+    data-focus-line="2" data-focus-id="flt">
+
+<body>
+    <script type="module" src="../main.js"></script>
+    <script type="module">
+        window.viewer.dblClickLineListeners.push((line, url, partialLine) => {
+            console.log(line, url, partialLine)
+        })
+    </script>
+</body>
+
 </html>
