--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,12 @@
 <html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn"
     data-focus-line="2" data-focus-id="flt">
 
+<head>
+    <style>
+        @import url(../main.css);
+    </style>
+</head>
+
 <body>
     <script type="module" src="../main.js"></script>
     <script type="module">
