--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <script type="module" src="../main.js"></script>
     <script type="module">
+        import "../main.js"
         window.viewer.dblClickLineListeners.push((line, url, partialLine) => {
             console.log(line, url, partialLine)
         })
