--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html style="background:black" data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn"
-    data-focus-line="2" data-focus-id="flt">
+<html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn" data-focus-line="2"
+    data-focus-id="flt">
 
 <head>
     <style>
