--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./main.stdn" data-focus-line="2"
+<html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./parts/1.stdn" data-focus-line="3"
     data-focus-id="flt">
-
-<head>
-    <style>
-        @import url(../main.css);
-    </style>
-</head>
 
 <body>
     <script type="module">
         import "../main.js"
-        window.viewer.dblClickLineListeners.push((line, url, partialLine) => {
-            console.log(line, url, partialLine)
+        window.viewer.dblClickLineListeners.push((...argv) => {
+            console.log(...argv)
         })
     </script>
 </body>
