--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./parts/1.stdn" data-focus-position="2 0 mark 0">
+<html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./parts/1.stdn" data-focus-position="2 0 mark 0 0">
 
 <body>
     <script type="module">
