--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,10 @@
 <html data-color-scheme="dark" data-src="./main.urls" data-focus-url="./parts/1.stdn"
     data-focus-position="2 0 mark 0 0">
 
+<head>
+    <meta charset="utf-8">
+</head>
+
 <body>
     <script type="module">
         import "../main.js"
