--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script type="module">
-        import "../main.js"
+        import '../main.js'
         window.viewer.dblClickLineListeners.push((...argv) => {
             console.log(...argv)
         })
